--- a/css/styles.css
+++ b/css/styles.css
@@ -87,6 +87,7 @@ ul {
     height: 80px;
     display: flex;
     align-items: center;
+    margin-bottom: -1px;
 }
 .header-container {
     display: flex;
@@ -140,14 +141,18 @@ ul {
 }
 .header-contact{
     margin-left: auto;
+   
 }
 
 .contact-list{
     color:var(--second-color);
     margin-left: 50px;
+    display: flex;
+    align-items: center;
 }
 .contact-list:nth-child(1){
     margin-left: 0px;
+    
     
 }
 .header-grey:hover,
@@ -180,7 +185,13 @@ ul {
     max-width: 696px;
     margin-left: auto;
     margin-right: auto;
-    
+}
+.box-icon {
+    background-color: var(--button-color);
+    border-radius: 4px;
+    width: 270px;
+    height: 120px;
+    margin-bottom: 30px;
     
 }
 .main-btn-nav {
