--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,8 @@
     --background-color:#2F303A;
     --color-contact:rgba(255, 255, 255, 0.6);
     --button-color:#F5F4FA;
+    --grey-color:#AFB1B8;
+    --socials-bg: rgba(255, 255, 255, 0.1);
     /* Other */
     --items: 3;
     --indent: 30px;
@@ -66,6 +68,7 @@ a {
 }
 button {
     cursor: pointer;
+    border: none;
 }
 
 .header-nav {
@@ -87,7 +90,8 @@ ul {
     height: 80px;
     display: flex;
     align-items: center;
-    margin-bottom: -1px;
+    border-bottom: 1px solid var(--button-color);
+
 }
 .header-container {
     display: flex;
@@ -149,25 +153,32 @@ ul {
     margin-left: 50px;
     display: flex;
     align-items: center;
+    fill: var(--grey-color);
+    display: flex;
+    align-items: center;
 }
 .contact-list:nth-child(1){
     margin-left: 0px;
-    
-    
+}
+.contact-icon {
+    margin-right: 10px;
 }
 .header-grey:hover,
 .header-grey:focus{
     color:var(--accent-color);
+    fill: var(--accent-color)
 }
                 /* main */
    
    .main-bg{
+    max-width: 1600px;
     background-color: var(--background-color);
     text-align: center;
     margin-left: auto;
     margin-right: auto;
     padding-top: 200px;
     padding-bottom: 200px;
+    color: var(--primary-white-color);
 }
 .main-bg .container{
     flex-direction: column;
@@ -185,6 +196,7 @@ ul {
     max-width: 696px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 200px;
 }
 .box-icon {
     background-color: var(--button-color);
@@ -199,9 +211,6 @@ ul {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
- }
-.main-btn {
-    gap: 8px;
 }
 
 .main-btn-style {
@@ -212,14 +221,14 @@ ul {
     line-height:calc(26 / 16);
     text-align: center;
     letter-spacing: 0.03em;
-    color:var(--body-color);
+    color:var(--primary-white-color);
     border: 0px solid var(--accent-color);
-    background-color: var(--button-color);
+    background-color: var(--accent-color);
     border-radius: 4px;
-    padding-top: 6px;
-    padding-left: 22px;
-    padding-right: 22px;
-    padding-bottom: 6px;
+    padding-top: 10px;
+    padding-left: 32px;
+    padding-right: 32px;
+    padding-bottom: 10px;
     margin: 30px auto 50px;
     
    
@@ -241,6 +250,47 @@ ul {
     padding-top: 94px;
     padding-bottom: 94px;
 }
+.main-btn {
+    gap: 8px;
+    margin-bottom: 56px;
+    display: flex;
+    justify-content: center;
+    border: 0px solid var(--button-color);
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    
+}
+.btn-portfolio {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height:calc(26 / 16);
+    text-align: center;
+    letter-spacing: 0.03em;
+    color:var(--body-color);
+    border: 0px solid var(--button-color);
+    background-color: var(--button-color);
+    border-radius: 4px;
+    padding-top: 6px;
+    padding-left: 22px;
+    padding-right: 22px;
+    padding-bottom: 6px;
+    /* margin: 30px auto 50px; */
+    border-radius: 4px;
+}
+.btn-portfolio:hover,
+.btn-portfolio:focus {
+    background: var(--accent-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+    color: var(--primary-white-color);
+}
                 /* section */
 .section {
     color:var(--primary-white-color);
@@ -248,8 +298,16 @@ ul {
 }
 .sect-gall-img {
     background-color: var(--primary-white-color);
-    border: 1px solid #EEEEEE;
     width: 370px;
+}
+
+.sect-gall-link {
+display: block;
+}
+
+.sect-gall-link:hover,
+.sect-gall-link:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .skills-icon-block {
     width: 270px;
@@ -330,6 +388,7 @@ ul {
 }
 .gallery-list {
     gap: 30px;
+    padding-bottom: 94px;
 }
             /* Team */
 
@@ -347,10 +406,12 @@ margin-right: auto;
 }
 .team-list {
     gap: 30px;
+   
+    
 }
 .team-gallery {
     width: 270px;
-    height: 368px;
+    height: 428px;
     margin-top: var(--indent);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
@@ -362,7 +423,37 @@ margin-top: var(--indent);
 }
 .team-prof{
 margin-top: 10px;
+
 }
+
+.socials-item {
+ display: flex;
+ justify-content: center;
+ gap: 10px;
+}
+
+.socials-icon {
+    width: 44px;
+    height: 44px;
+    margin-top: 16px;
+}
+.socials-link {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    fill: var(--grey-color);
+    border-radius: 50%;
+}
+.socials-link:hover,
+.socials-link:focus {
+    fill:var(--primary-white-color);
+    background-color:var(--accent-color);
+}
+
+
 .section-team {
     font-family: 'Roboto';
     font-style: normal;
@@ -395,7 +486,7 @@ margin-top: 10px;
     text-align: center;
     letter-spacing: 0.03em;
     color:var(--second-color);
-    padding-bottom: 94px;
+
 }
 
  .sect-gall-img .section-title{
@@ -407,13 +498,13 @@ margin-top: 10px;
     line-height: 2;
     letter-spacing: 0.06em;
     text-align: left;
-    width: 322px;
-    height: 26px;
+    margin-bottom: 4px;
    
 }
 .img-info {
     padding: 24px 20px;
-    
+    border: 1px solid #EEEEEE;
+    border-top: 0;
 }
 .section-text{
     color:var(--second-color);
@@ -426,6 +517,31 @@ margin-top: 10px;
     text-align: left;
     padding-top: 4px;
 }
+.clients-section {
+    margin-bottom: 94px;
+    margin-top: 50px;
+    gap: 30px;
+}
+.clients-section-block {
+    width: 170px;
+    height: 92px;
+    border-radius: 4px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    background-position: center;
+    justify-content: center;
+    border: 1px solid var(--grey-color);
+    border-radius: 4px;
+    fill: var(--grey-color);
+}
+.clients-section-block:hover,
+.clients-section-block:focus {
+    fill: var(--accent-color);
+    border: 1px solid var(--accent-color);
+
+}
+
                 /* footer */
 
 .footer {
@@ -475,4 +591,43 @@ margin-top: 10px;
    }
 .footer-nav {
    margin-bottom: 9px;
+}
+.footer-socials-title {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--primary-white-color);
+}
+.footer-column {
+    display: flex;
+    align-items: baseline;
+    flex-direction: row;
+}
+.footer-socials {
+    margin-left: 60px;
+}
+.footer-socials-icon {
+    width: 44px;
+    height: 44px;
+    margin-top: 20px;
+}
+.footer-socials-link {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    fill: var(--primary-white-color);
+    background-color: var(--socials-bg);
+    border-radius: 50%;
+}
+.footer-socials-link:hover,
+.footer-socials-link:focus {
+    fill:var(--primary-white-color);
+    background-color:var(--accent-color);
 }
