--- a/css/styles.css
+++ b/css/styles.css
@@ -10,18 +10,16 @@
     --button-color:#F5F4FA;
     --grey-color:#AFB1B8;
     --socials-bg: rgba(255, 255, 255, 0.1);
+    --bg-glr-text:rgba(47, 48, 58, 0.8);
     /* Other */
     --items: 3;
     --indent: 30px;
-
-
 }
 body {
     font-family:Roboto,sans-serif;
     color:var(--body-color);
     font-size: 14px;
     letter-spacing: 0.03em;
-    
 } 
 .container{
     width: 1200px;
@@ -84,6 +82,9 @@ ul {
         margin: 0;
         display: flex;
 } 
+.indent {
+    padding-top: 94px;   
+}
 
                 /* header */
 .header {
@@ -134,22 +135,36 @@ ul {
     padding-left: 93px;
     
 }
-.header-btn-black{
+
+.header-btn {
     color:var(--body-color);
     padding-left: 50px;
-    
+    padding-top: 32px;
+    padding-bottom: 32px;
+   
 }
-.header-btn{
-    color:var(--accent-color);
-    background-color: var(--primary-white-color);
-    padding-left: 50px;
-    
+.color-action {
+    color: var(--accent-color);
 }
 .header-contact{
     margin-left: auto;
-    /* display: flex;
-    align-items: center; */
 }
+.header-nav-position {
+    position: relative;
+    
+}
+/* .nav-position-action {
+     opacity: 1;
+    position: absolute;
+
+    border-radius: 2px;
+    background-color: var(--accent-color);
+    bottom: 0;
+    left: 0;
+    transform: translate(-100%);
+
+} */
+
 .contact-list{
     color:var(--second-color);
     margin-left: 50px;
@@ -184,10 +199,6 @@ ul {
     padding-bottom: 200px;
     color: var(--primary-white-color);
 }
-.main-bg .container{
-    flex-direction: column;
-    display: flex;
-}
 .main-title {
     font-family: 'Roboto';
     font-style: normal;
@@ -200,7 +211,6 @@ ul {
     max-width: 696px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 200px;
 }
 .box-icon {
     background-color: var(--button-color);
@@ -233,7 +243,8 @@ ul {
     padding-left: 32px;
     padding-right: 32px;
     padding-bottom: 10px;
-    margin: 30px auto 50px;
+    margin: 30px auto 0px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     
    
 }
@@ -281,11 +292,7 @@ ul {
     border: 0px solid var(--button-color);
     background-color: var(--button-color);
     border-radius: 4px;
-    padding-top: 6px;
-    padding-left: 22px;
-    padding-right: 22px;
-    padding-bottom: 6px;
-    /* margin: 30px auto 50px; */
+    padding: 6px 22px;
     border-radius: 4px;
 }
 .btn-portfolio:hover,
@@ -296,15 +303,44 @@ ul {
     color: var(--primary-white-color);
 }
                 /* section */
-.section {
-    color:var(--primary-white-color);
-    padding-top: 94px;   
-}
+
 .sect-gall-img {
     background-color: var(--primary-white-color);
     width: 370px;
+    
 }
-
+.glr-position {
+    position: relative;
+    overflow: hidden;
+}
+.glr-position-style {
+    display: flex;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 1;
+    background-color: rgba(33, 150, 243, 0.9);
+    transform: translate(0%,200%);
+    transition: transform 0.5s;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+}
+.sect-gall-img:hover .glr-position-style {
+    opacity: 1;
+    transform: translate(0);
+}
+.glr-position-text {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: calc(28 / 18);
+    letter-spacing: 0.03em;
+    color: var(--primary-white-color);
+    padding: 63px 24px;
+    
+}
 .sect-gall-link {
 display: block;
 }
@@ -324,10 +360,17 @@ display: block;
     align-items: center;
     background-position: center;
     justify-content: center;
-    
+}
+.skills-item {
+    display: flex;
     
 }
-
+.item {
+    margin-right: 30px;
+}
+.item:last-child {
+    margin-right: 0px;
+}
 .section-skills h3 {
     font-family: 'Roboto';
     font-style: normal;
@@ -361,8 +404,7 @@ display: block;
     margin-top: 10px;
     width: 270px;
     height: 72px;
-    margin-right: 30px;
-   
+       
 }
 
 .work-gallery{
@@ -388,7 +430,28 @@ display: block;
     
 }
 .img-gallery {
-    display: flex;
+    /* display: flex; */
+    color:var(--primary-white-color);
+}
+.glr-text-position {
+    position: relative;
+}
+.gallery-text-style {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: calc(16 / 14);
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    background-color:var(--bg-glr-text);
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    padding-top: 27px;
+    padding-bottom: 27px;
+    bottom: 0%;
 }
 .gallery-list {
     gap: 30px;
